Assignment2_Zhao_Duo/tests/automated/tests/bad/ScientificNotationLittleBlandWithBadCharacters-36Chomped.calc
a .0e2%3 b 1.e2%5 c 2.3e3%1 d 34.5e4%5 e 6.78e7%3 f 99.99e5%6 g 3e9%3 h 76e4%5